# iron-boy

./: Cargo.toml  README.md
.cargo/: config.toml
core/: Cargo.toml
core/src/: interrupt.rs  joypad.rs  lib.rs  ppu.rs  timer.rs
core/src/apu/: mod.rs
core/src/cart/: mbc1.rs  mbc2.rs  mbc3.rs  mem.rs  mod.rs  save.rs
core/src/cpu/: control.rs  interrupt.rs  mod.rs
core/src/system/: dma.rs  mod.rs
egui-osstr/: Cargo.toml
egui-osstr/src/: lib.rs  utf8.rs
file-dialog/: Cargo.toml  style.css  test.html
file-dialog/src/: desktop.rs  lib.rs  main.rs  web.rs
frontend/: Cargo.toml
frontend/src/: audio.rs  background.rs  emulator.rs  engine.rs  event.rs  gui.rs  main.rs  options.rs
frontend/src/gui/: engine.rs  mod.rs  ui.rs
frontend/src/gui/chooser/: desktop.rs  mod.rs  web.rs
run-wasm/: Cargo.toml
src/: apu.rs  audio.rs  dma.rs  instruction_set.rs  interrupt.rs  joypad.rs  main.rs  memory.rs  ppu.rs  reg.rs  system.rs  timer.rs
src/apu/: mod.rs  noise.rs  pulse.rs  wave.rs
src/cart/: mbc1.rs  mbc2.rs  mbc3.rs  mem.rs  mod.rs  rtc.rs  simple.rs
src/cpu/: alu.rs  control.rs  instruction_set.rs  interrupt.rs  load.rs  mod.rs
src/system/: apu.rs  cpu.rs  dma.rs  joypad.rs  mod.rs  ppu.rs  timer.rs
