[package]
name = "iron-boy"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
ambassador = { version = "0.3.5", default-features = false }
bilge = "0.2.0"
bincode = "1.3.3"
cpal = "0.15.2"
crossbeam-queue = "0.3.8"
dasp = { version = "0.11.0", features = ["interpolate-linear", "interpolate"] }
partial-borrow = "1.0.1"
pixels = "0.12.0"
serde = { version = "1.0.188", features = ["derive"] }
winit = "0.28.3"

[features]
cpu-debug = []
debug = ["cpu-debug"]
