[package]
name = "file-dialog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
thiserror = "1.0.48"
egui = "0.22.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui_file = "0.10.2"
tokio = { version = "1.32.0", features = ["fs", "io-util"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.64"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.64"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlHeadElement",
    "HtmlInputElement",
    "HtmlFormElement",
    "HtmlButtonElement",
    "HtmlDialogElement",
    "Event",
    "FileList",
    "File",
    "FileReader",
    "ProgressEvent",
]
