[package]
name = "iron-boy"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
iron-boy-core = { path = "../core" }
bincode = "1.3.3"
cpal = "0.15.2"
crossbeam-queue = "0.3.8"
dasp = { version = "0.11.0", features = ["interpolate-linear", "interpolate"] }
pixels = "0.12.0"
winit = "0.28.3"
