[package]
name = "iron-boy"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
iron-boy-core = { path = "../core" }
bincode = "1.3.3"
crossbeam-queue = "0.3.8"
dasp = { version = "0.11.0", features = ["interpolate-linear", "interpolate"] }
egui = "0.22.0"
egui-wgpu = "0.22.0"
egui-winit = { version = "0.22.0", default-features = false }
pixels = "0.13.0"
winit = "0.28.6"
clap = { version = "4.4.4", features = ["derive"] }
instant = "0.1.12"
log = "0.4.20"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["GpuTextureFormat"] }
cpal = { version = "0.15.2", features = ["wasm-bindgen"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10.0"
pollster = "0.3.0"
cpal = "0.15.2"
